addconn: s/Connection/Method/g for transport combo box

--- a/src/vmm-open-connection.glade
+++ b/src/vmm-open-connection.glade
@@ -144,7 +144,7 @@ SSL/TLS with certificates</property>
                   <widget class="GtkLabel" id="label88">
                     <property name="visible">True</property>
                     <property name="xalign">0</property>
-                    <property name="label" translatable="yes">Connec_tion:</property>
+                    <property name="label" translatable="yes">Me_thod:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">connection</property>
                   </widget>
