--- a/src/vmm-manager.glade
+++ b/src/vmm-manager.glade
@@ -74,7 +74,7 @@
                   <widget class="GtkMenu" id="menuitem5_menu">
                     <child>
                       <widget class="GtkImageMenuItem" id="menu_host_details">
-                        <property name="label" translatable="yes">_Host Details</property>
+                        <property name="label" translatable="yes">_Connection Details</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">False</property>
