--- a/src/vmm-create-interface.glade
+++ b/src/vmm-create-interface.glade
@@ -436,7 +436,7 @@
                               <widget class="GtkLabel" id="ip-config-label">
                                 <property name="visible">True</property>
                                 <property name="xalign">0</property>
-                                <property name="label" translatable="yes">ip desc</property>
+                                <property name="label">ip desc</property>
                               </widget>
                               <packing>
                                 <property name="position">0</property>
