details: Mark video and char dev titles as translatable

--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -3977,7 +3977,7 @@ I/O:</property>
                                 <child>
                                   <widget class="GtkLabel" id="hostdev-title1">
                                     <property name="visible">True</property>
-                                    <property name="label">&lt;b&gt;Video&lt;/b&gt;</property>
+                                    <property name="label" translatable="yes">&lt;b&gt;Video&lt;/b&gt;</property>
                                     <property name="use_markup">True</property>
                                   </widget>
                                   <packing>
