details: Bump memory UI caps to 1TB

--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -1947,7 +1947,7 @@ I/O:</property>
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">True</property>
                                                     <property name="invisible_char">●</property>
-                                                    <property name="adjustment">2 1 32 1 2 0</property>
+                                                    <property name="adjustment">2 1 1024 1 2 0</property>
                                                     <property name="climb_rate">1</property>
                                                     <property name="numeric">True</property>
                                                     <property name="update_policy">if-valid</property>
@@ -2362,7 +2362,7 @@ I/O:</property>
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">True</property>
                                                 <property name="invisible_char">●</property>
-                                                <property name="adjustment">50 50 32000 1 25 0</property>
+                                                <property name="adjustment">50 1 10240000 1 25 0</property>
                                                 <property name="climb_rate">2</property>
                                                 <property name="numeric">True</property>
                                                 <property name="update_policy">if-valid</property>
@@ -2405,7 +2405,7 @@ I/O:</property>
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">True</property>
                                                 <property name="invisible_char">●</property>
-                                                <property name="adjustment">50 50 32000 1 25 0</property>
+                                                <property name="adjustment">50 1 10240000 1 25 0</property>
                                                 <property name="climb_rate">2</property>
                                                 <property name="numeric">True</property>
                                                 <property name="update_policy">if-valid</property>
